@@ -2747,6 +2747,16 @@
         QUnit.ok(compare(unique_value(domain), [true, '=', ['model', 1]]));
         domain = [['a.b.id', '=', 1, 'model']];
         QUnit.ok(compare(unique_value(domain), [false, null, null]));
+        domain = [['a', 'in', [1]]];
+        QUnit.ok(compare(unique_value(domain), [true, 'a', 1]));
+        domain = [['a', 'in', [1, 2]]];
+        QUnit.ok(compare(unique_value(domain), [false, null, null]));
+        domain = [['a', 'in', []]];
+        QUnit.ok(compare(unique_value(domain), [false, null, null]));
+        domain = [['a.b', 'in', [1]]];
+        QUnit.ok(compare(unique_value(domain), [false, null, null]));
+        domain = [['a.id', 'in', [1], 'model']];
+        QUnit.ok(compare(unique_value(domain), [true, 'a.id', ['model', 1]]));
     });
 
     QUnit.test('DomainInversion evaldomain', function() {
